Fix input label overflow - Closes #214

--- a/src/app/components/main/main.less
+++ b/src/app/components/main/main.less
@@ -9,3 +9,7 @@ md-toast.lsk-toast-error {
     background-color: #c62828;
   }
 }
+
+html body md-input-container {
+  overflow-x: initial;
+}
